<resources>
    <string name="app_name">Feed the cat</string>
    <string name="feed_button">Feed</string>
    <string name="satiety">Satiety</string>
    <string name="zero_score">0</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_in">Log in</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="score">Score</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="developer">Developer</string>
    <string name="author">Kirill Korolenock</string>
    <string name="group">Group</string>
    <string name="group_number">951007</string>
    <string name="bsuir_2022">BSUIR, 2022</string>
    <string name="date_table_header">Date</string>
</resources>